--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+
+				<section>
+					<h1>Insect Camouflage, Mimicry, and Defense</h1>
+					<h4>ALBI-345 General Entomology</h4>
+					<h4>Aubrey Moore</h4>
+				</section>
+
 				<section>
 					<h4>Acknowledgment</h4>
 					Thanks to Dr. Rich Zack at Washington State University for sharing most of the slides in this presentation.
@@ -90,6 +97,43 @@
 					<section> <img src="images/ent_101_mimicry-033.jpg"> </section>
 
 					<section> <img src="images/ent_101_mimicry-034.jpg"> </section>
+
+					<section>
+						<h6>Insect images on insect wings 1</h6>
+						<em>Labdia</em> spp.: Moths in this genus are commonly reared from <em>Leucaena leucocephala</em> seed pods on Guam.<br>
+						<img src="https://github.com/aubreymoore/wiki/raw/master/images/labdia.jpg" height="510">
+					</section>
+
+					<section>
+						<h6>Insect images on insect wings 2</h6>
+						<em>Cosmopterix</em> spp.<br>
+						<img src="https://www.researchgate.net/profile/Sjaak_J_Koster/publication/303437183/figure/fig1/AS:371751251922944@1465643813759/Plate-1_W640.jpg" height="560">
+					</section>
+
+					<section>
+						<h6>Insect images on insect wings 3</h6>
+						<em>Goniurellia tridens</em><br>
+						<img src="https://geekologie.com/2013/11/13/fly-with-ants-on-wings.jpg" height="560">
+					</section>
+
+					<section>
+						<h6>Insect images on insect wings 4</h6>
+						<em>Macrocilix maia</em><br>
+						<img src="https://github.com/aubreymoore/wiki/raw/master/images/bird-shit-moth.png" height="560">
+					</section>
+
+					<section>
+						<p>Peppered moth story</p>
+						<ul>
+							<li>industrial melanism in adults
+							<li>adaptive color change in caterpillars
+						</ul>
+					</section>
+
+					<section>
+						<h6>Diptera: Syrphidae (hover flies)</h6>
+						<img src="images/1024px-Syrphidae_poster.jpg" height="610">
+					</section>
 
 			</div>
 		</div>
