--- a/index.html
+++ b/index.html
@@ -16,124 +16,134 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-
 				<section>
-					<h1>Insect Camouflage, Mimicry, and Defense</h1>
-					<h4>ALBI-345 General Entomology</h4>
-					<h4>Aubrey Moore</h4>
-				</section>
+					<section>
+						<h1>Insect Camouflage, Mimicry, and Defense</h1>
+						<h4>ALBI-345 General Entomology</h4>
+						<h4>Aubrey Moore</h4>
+					</section>
 
-				<section>
-					<h4>Acknowledgment</h4>
-					Thanks to Dr. Rich Zack at Washington State University for sharing most of the slides in this presentation.
-				</section>
+					<section>
+						<h4>Acknowledgment</h4>
+						Thanks to Dr. Rich Zack at Washington State University for sharing most of the slides in this presentation.
+					</section>
 
 					<section> <img src="images/ent_101_mimicry-000.jpg"> </section>
-
 					<section> <img src="images/ent_101_mimicry-001.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-002.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-003.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-004.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-005.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-006.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-007.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-008.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-009.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-010.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-011.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-012.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-013.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-014.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-015.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-016.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-017.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-018.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-019.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-020.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-021.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-022.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-023.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-024.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-025.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-026.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-027.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-028.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-029.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-030.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-031.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-032.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-033.jpg"> </section>
-
-					<section> <img src="images/ent_101_mimicry-034.jpg"> </section>
+				</section>
 
 					<section>
-						<h6>Insect images on insect wings 1</h6>
-						<em>Labdia</em> spp.: Moths in this genus are commonly reared from <em>Leucaena leucocephala</em> seed pods on Guam.<br>
-						<img src="https://github.com/aubreymoore/wiki/raw/master/images/labdia.jpg" height="510">
+						<section><h1>Camouflage</h1></section>
+						<section> <img src="images/ent_101_mimicry-002.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-003.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-004.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-005.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-006.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-007.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-008.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-009.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-010.jpg"> </section>
+			  	</section>
+
+			  	<section>
+						<section><h1>Warning coloration</h1></section>
+						<section> <img src="images/ent_101_mimicry-011.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-012.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-013.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-014.jpg"> </section>
+			  	</section>
+
+					<section>
+						<section><h1>Mimicry</h1></section>
+						<section> <img src="images/ent_101_mimicry-015.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-016.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-017.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-018.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-019.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-020.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-021.jpg"> </section>
+						<section>
+							<h6>Diptera: Syrphidae (hover flies)</h6>
+							<img src="images/1024px-Syrphidae_poster.jpg" height="610">
+						</section>
+			   	</section>
+
+					<section>
+						<section><h1>Insect defense systems</h1></section>
+						<section> <img src="images/ent_101_mimicry-022.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-023.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-024.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-025.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-026.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-027.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-028.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-029.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-030.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-031.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-032.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-033.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-034.jpg"> </section>
 					</section>
 
 					<section>
-						<h6>Insect images on insect wings 2</h6>
-						<em>Cosmopterix</em> spp.<br>
-						<img src="https://www.researchgate.net/profile/Sjaak_J_Koster/publication/303437183/figure/fig1/AS:371751251922944@1465643813759/Plate-1_W640.jpg" height="560">
+						<section><h1>Peppered moth</h1></section>
+						<section>
+							<p>Peppered moth story</p>
+							<ul>
+								<li>industrial melanism in adults
+								<li>adaptive color change in caterpillars
+							</ul>
+						</section>
+						<section>
+							<img src="images/peppered_moth.png" height="600"><br>
+							<a href="https://en.wikipedia.org/wiki/Peppered_moth_evolution">https://en.wikipedia.org/wiki/Peppered_moth_evolution</a>
+						</section>
+						<section><img src="images/peppered_moth_tree.png"></section>
+						<section><img src="images/peppered_moth_bird.png"></section>
+						<section><img src="images/peppered_moth_plot.png"></section>
+						<section>
+							<ul>
+							 <li>Industrial melanism in the peppered moth is a prime example of natural selection.
+							 <li><a href="https://en.wikipedia.org/wiki/Peppered_moth_evolution">Read the full story</a>
+							</ul>
+						</section>
+						<section><img src="images/peppered_moth_caterpillars.png"></section>
+						<section>
+							<ul>
+								<li>Peppered moth caterpillars can change their color to match the twigs they are on.
+								<li>A <a href="https://www.nature.com/articles/s42003-019-0502-7">recent journal article</a> reports that the twig color is not sensed by their eyes, but by their skin.
+							</ul>
+						</section>
 					</section>
 
 					<section>
-						<h6>Insect images on insect wings 3</h6>
-						<em>Goniurellia tridens</em><br>
-						<img src="https://geekologie.com/2013/11/13/fly-with-ants-on-wings.jpg" height="560">
-					</section>
+						<section><h1>Insect images on insect wings</h1></section>
 
-					<section>
-						<h6>Insect images on insect wings 4</h6>
-						<em>Macrocilix maia</em><br>
-						<img src="https://github.com/aubreymoore/wiki/raw/master/images/bird-shit-moth.png" height="560">
-					</section>
+						<section>
+							<h6>Insect images on insect wings 1</h6>
+							<em>Labdia</em> spp.: Moths in this genus are commonly reared from <em>Leucaena leucocephala</em> seed pods on Guam.<br>
+							<img src="images/labdia.jpg" height="510">
+						</section>
 
-					<section>
-						<p>Peppered moth story</p>
-						<ul>
-							<li>industrial melanism in adults
-							<li>adaptive color change in caterpillars
-						</ul>
-					</section>
+						<section>
+							<h6>Insect images on insect wings 2</h6>
 
-					<section>
-						<h6>Diptera: Syrphidae (hover flies)</h6>
-						<img src="images/1024px-Syrphidae_poster.jpg" height="610">
-					</section>
+							<em>Cosmopterix</em> spp.<br>
+							<img src="images/cosmopterix.jpg" height="560">
+						</section>
+
+						<section>
+							<h6>Insect images on insect wings 3</h6>
+							<em>Goniurellia tridens</em><br>
+							<img src="images/fly-with-ants-on-wings.jpg" height="560">
+						</section>
+
+						<section>
+							<h6>Insect images on insect wings 4</h6>
+							<em>Macrocilix maia</em><br>
+							<img src="images/bird-shit-moth.png" height="560">
+						</section>
+				</section>
 
 			</div>
 		</div>
