--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 						<section><h1>Warning coloration</h1></section>
 						<section> <img src="images/ent_101_mimicry-011.jpg"> </section>
 						<section> <img src="images/ent_101_mimicry-012.jpg"> </section>
+						<section>
+							<img src="images/danger_yellow_black.png" width="800">
+							<br>
+							<img src="images/danger_red_black.png" width="800">
+						</section>
 						<section> <img src="images/ent_101_mimicry-013.jpg"> </section>
 						<section> <img src="images/ent_101_mimicry-014.jpg"> </section>
 			  	</section>
@@ -60,12 +65,12 @@
 						<section> <img src="images/ent_101_mimicry-017.jpg"> </section>
 						<section> <img src="images/ent_101_mimicry-018.jpg"> </section>
 						<section> <img src="images/ent_101_mimicry-019.jpg"> </section>
-						<section> <img src="images/ent_101_mimicry-020.jpg"> </section>
-						<section> <img src="images/ent_101_mimicry-021.jpg"> </section>
 						<section>
 							<h6>Diptera: Syrphidae (hover flies)</h6>
-							<img src="images/1024px-Syrphidae_poster.jpg" height="610">
+							<img src="images/syrphidae.png" height="610">
 						</section>
+						<section> <img src="images/ent_101_mimicry-020.jpg"> </section>
+						<section> <img src="images/ent_101_mimicry-021.jpg"> </section>
 			   	</section>
 
 					<section>
